# High-Frequency-Market-Making-Engine-Architecture-Stochastic-VS-RL-Strategy

./: .gitignore  README.md
cpp_engine/: CMakeLists.txt
cpp_engine/src/: inference_engine.cpp
models/: a2c_actor.pt  avellaneda_stoikov.py
scripts/: train_rl.py  visualize.py
simulator/: lob_env.py
